force-app/main/default/objects/LLC_BI__Relationship_Loan_to_Value_Calc_Config__c/LLC_BI__Relationship_Loan_to_Value_Calc_Config__c.object-meta.xml
<CustomObject>
    <description>This object is used to configure the relationship loan to value calculation.</description>
    <label>Relationship Loan to Value Calc Config</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Loan to Value Calc Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>