force-app/main/default/objects/LLC_BI__Relationship_Loan_to_Value_Calc_Config__c/fields/LLC_BI__Borrower_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Borrower_Type__c</fullName>
    <description>Administrators populate this multi-select picklist with the borrower type(s) whose collateral they want to include in the RLTV calculation.</description>
    <inlineHelpText>Select the borrower type(s) whose collateral you want to include in the RLTV calculation.</inlineHelpText>
    <label>Borrower Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
            <value>
                <fullName>Limited Guarantor</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
            <value>
                <fullName>Related Entity</fullName>
            </value>
            <value>
                <fullName>Grantor</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>