force-app/main/default/objects/LLC_BI__Relationship_Loan_to_Value_Calc_Config__c/fields/LLC_BI__Collateral_Value_Field__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Value_Field__c</fullName>
    <description>The administrator populates this required field with the field API name of the collateral value that is used in the relationship loan to value calculation.</description>
    <inlineHelpText>Enter the API name of the field on the Collateral Mgmt object that contains the collateral value you want to use in the relationship loan to value calculation.</inlineHelpText>
    <label>Collateral Value Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>