force-app/main/default/objects/LLC_BI__Relationship_Loan_to_Value_Calc_Config__c/fields/LLC_BI__RLTV_Calculated_Value_Field__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__RLTV_Calculated_Value_Field__c</fullName>
    <description>The administrator populates this required field with the API name of the field on the Relationship Loan to Value Calculation object where they want the relationship LTV calculated value to populate.</description>
    <inlineHelpText>Enter the API name of the field on the Relationship Loan to Value Calculation object where you want the relationship LTV calculated value to populate.</inlineHelpText>
    <label>RLTV Calculated Value Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>