force-app/main/default/objects/LLC_BI__Relationship_Loan_to_Value_Calc_Config__c/fields/LLC_BI__Stage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Stage__c</fullName>
    <description>Administrators populate this multi-select picklist with the loan stage(s) to filter for loans to include in the RLTV calculation.</description>
    <inlineHelpText>Select the loan stage(s) to filter for the loans you want to include in the RLTV calculation.</inlineHelpText>
    <label>Stage</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Credit Underwriting</fullName>
            </value>
            <value>
                <fullName>Loan Committee</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Doc Prep</fullName>
            </value>
            <value>
                <fullName>Doc Review</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Closed Funded</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Servicing</fullName>
            </value>
            <value>
                <fullName>Special Assets</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>